--- a/.drone.yml
+++ b/.drone.yml
@@ -18,4 +18,4 @@ pipeline:
       - ./tests/install-deps.sh
       - pip install -r test-requirements.txt
       - .travis/test_seahub_changes.sh; rc=$?; if test "$rc" -eq 0; then ./tests/seahubtests.sh init && ./tests/seahubtests.sh runserver && ./tests/seahubtests.sh test; else true; fi
-      - test $DRONE_COMMIT_BRANCH -eq "python3-master" && .travis/dist_and_push.sh
+      - if test $DRONE_COMMIT_BRANCH = "python3-master"; then .travis/dist_and_push.sh; else true; fi
