--- a/.drone.yml
+++ b/.drone.yml
@@ -10,5 +10,12 @@ pipeline:
         exclude: []
 
     commands:
-      - .travis/test_seahub_changes.sh; echo "hello"; rc=$?; if test "$rc" -eq 0; then ./tests/seahubtests.sh init && ./tests/seahubtests.sh runserver && ./tests/seahubtests.sh test; else true; fi
-      - echo "hello"
+      - cd /tmp/seafile-test-deploy && git fetch origin python3:python3 && git checkout python3
+      - ./bootstrap.sh && cd -
+      - export CCNET_CONF_DIR=/tmp/ccnet SEAFILE_CONF_DIR=/tmp/seafile-data
+      - echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
+      - cd /drone/src/github.com/haiwen/seahub
+      - ./tests/install-deps.sh
+      - pip install -r test-requirements.txt
+      - .travis/test_seahub_changes.sh; rc=$?; if test "$rc" -eq 0; then ./tests/seahubtests.sh init && ./tests/seahubtests.sh runserver && ./tests/seahubtests.sh test; else true; fi
+      - if test $DRONE_COMMIT_BRANCH = "master"; then .travis/dist_and_push.sh; else true; fi
