--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "jest": "20.0.4",
     "merge": "^1.2.1",
     "moment": "^2.22.2",
+    "number-precision": "^1.3.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
