--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@seafile/seafile-editor": "^0.2.76",
     "MD5": "^1.3.0",
     "autoprefixer": "7.1.6",
+    "chart.js": "^2.9.1",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.0.8",
     "css-loader": "0.28.7",
@@ -31,8 +32,10 @@
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.8.0",
     "react-codemirror": "^1.0.0",
     "react-cookies": "^0.1.0",
+    "react-datepicker": "^2.9.6",
     "react-dom": "^16.8.6",
     "react-i18next": "^10.12.2",
     "react-image-lightbox": "^5.1.0",
