--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@reach/router": "^1.2.0",
     "@seafile/resumablejs": "^1.1.15",
     "@seafile/seafile-editor": "^0.2.76",
+    "@seafile/seafile-calendar": "0.0.8",
     "MD5": "^1.3.0",
     "autoprefixer": "7.1.6",
     "chart.js": "^2.9.1",
@@ -35,7 +36,6 @@
     "react-chartjs-2": "^2.8.0",
     "react-codemirror": "^1.0.0",
     "react-cookies": "^0.1.0",
-    "react-datepicker": "^2.9.6",
     "react-dom": "^16.8.6",
     "react-i18next": "^10.12.2",
     "react-image-lightbox": "^5.1.0",
