--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@reach/router": "^1.2.0",
     "@seafile/resumablejs": "^1.1.15",
+    "@seafile/seafile-calendar": "0.0.8",
     "@seafile/seafile-editor": "^0.2.76",
     "MD5": "^1.3.0",
     "autoprefixer": "7.1.6",
+    "chart.js": "^2.9.1",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.0.8",
     "css-loader": "0.28.7",
@@ -31,6 +33,7 @@
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.8.0",
     "react-codemirror": "^1.0.0",
     "react-cookies": "^0.1.0",
     "react-dom": "^16.8.6",
@@ -41,7 +44,7 @@
     "react-responsive": "^6.1.2",
     "react-select": "^2.4.1",
     "reactstrap": "^6.4.0",
-    "seafile-js": "^0.2.139",
+    "seafile-js": "^0.2.140",
     "socket.io-client": "^2.2.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "unified": "^7.0.0",
