--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "@seafile/react-image-lightbox": "0.0.1",
     "@seafile/resumablejs": "^1.1.15",
     "@seafile/seafile-calendar": "0.0.12",
-    "@seafile/seafile-editor": "^0.2.84",
+    "@seafile/seafile-editor": "^0.3.25",
     "MD5": "^1.3.0",
     "autoprefixer": "7.1.6",
     "chart.js": "^2.9.1",
@@ -125,6 +125,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^5.0.0",
+    "style-loader": "^0.19.0",
     "webpack": "3.8.1",
     "webpack-bundle-tracker": "^0.4.2-beta",
     "webpack-dev-server": "2.9.4",
