--- a/frontend/package.json
+++ b/frontend/package.json
@@ -123,6 +123,7 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
+    "fs-extra": "^9.0.1",
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^5.0.0",
     "style-loader": "^0.19.0",
