--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+jsonfield==2.0.2
 python-dateutil==2.7.0
 python-memcached==1.57
 chardet==3.0.4
@@ -5,10 +6,10 @@ six==1.11.0
 Pillow==4.3.0
 Django==1.11.15
 django-compressor==2.2
-git+git://github.com/haiwen/django-post_office.git@2312cf240363721f737b5ac8eb86ab8cb255938f#egg=django-post_office
 django-statici18n==1.7.0
 djangorestframework==3.3.3
 git+git://github.com/haiwen/django-constance.git@8508ff29141732190faff51d5c2b5474da297732#egg=django-constance[database]
+git+git://github.com/haiwen/django-post_office.git@4c76ee487de69b80a16e4fe0a2d63c9e362bc160#egg=django-post_office
 openpyxl==2.3.0
 pytz==2015.7
 django-formtools==2.1
