--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@reach/router": "^1.2.0",
     "@seafile/react-image-lightbox": "0.0.1",
-    "@seafile/resumablejs": "^1.1.15",
+    "@seafile/resumablejs": "1.1.16",
     "@seafile/seafile-calendar": "0.0.12",
     "@seafile/seafile-editor": "^0.2.84",
     "MD5": "^1.3.0",
