--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@seafile/seafile-calendar": "0.0.12",
     "@seafile/seafile-editor": "0.3.26",
     "MD5": "^1.3.0",
+    "chart.js": "2.9.4",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.0.8",
     "dotenv": "4.0.0",
