--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,27 +9,18 @@
     "@seafile/seafile-calendar": "0.0.12",
     "@seafile/seafile-editor": "0.3.26",
     "MD5": "^1.3.0",
-    "autoprefixer": "7.1.6",
-    "chart.js": "^2.9.1",
+    "chart.js": "2.9.4",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.0.8",
-    "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
-    "faker": "^4.1.0",
-    "file-loader": "1.1.5",
     "glamor": "^2.20.40",
-    "html-webpack-plugin": "2.29.0",
     "i18next": "^17.0.13",
     "i18next-browser-languagedetector": "^3.0.3",
     "i18next-xhr-backend": "^3.1.2",
-    "immutability-helper": "^3.0.0",
-    "jest": "20.0.4",
     "merge": "^1.2.1",
     "moment": "^2.22.2",
     "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.8",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
@@ -46,9 +37,7 @@
     "reactstrap": "^6.4.0",
     "seafile-js": "0.2.162",
     "socket.io-client": "^2.2.0",
-    "sw-precache-webpack-plugin": "0.11.4",
     "unified": "^7.0.0",
-    "url-loader": "0.6.2",
     "url-parse": "^1.4.3",
     "vfile": "^3.0.0",
     "video.js": "^7.4.1",
@@ -104,6 +93,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "autoprefixer": "7.1.6",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "7.2.3",
@@ -115,6 +105,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "css-loader": "0.28.7",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -123,10 +114,17 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
     "fs-extra": "^9.0.1",
+    "html-webpack-plugin": "2.29.0",
+    "jest": "20.0.4",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.8",
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^5.0.0",
     "style-loader": "^0.19.0",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-bundle-tracker": "^0.4.2-beta",
     "webpack-dev-server": "2.9.4",
