--- a/.gitignore
+++ b/.gitignore
@@ -61,5 +61,6 @@ frontend/webpack-stats.dev.json
 frontend/node_modules
 frontend/build
 frontend/package-lock.json
+frontend/.eslintcache
 
 /.idea
