--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,8 +1,4 @@
 {
-  "presets": ["react", "es2015", "stage-0"],
-  "env": {
-    "development": {
-      "presets": ["react-hmre"]
-    }
-  }
+  "presets": ["react-app"],
+  "plugins": ["dynamic-import-node"]
 }
