repair build bug

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,18 @@
     "test": "node scripts/test.js --env=jsdom",
     "dev": "export NODE_ENV=development && node config/server.js"
   },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,mjs}"
