--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "@seafile/react-image-lightbox": "0.0.1",
     "@seafile/resumablejs": "1.1.16",
     "@seafile/seafile-calendar": "0.0.12",
-    "@seafile/seafile-editor": "0.3.44",
+    "@seafile/seafile-editor": "^0.3.46",
     "MD5": "^1.3.0",
     "chart.js": "2.9.4",
     "classnames": "^2.2.6",
