[CE] search: added 'loading' & 'no result' tip

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -24,6 +24,7 @@
       "always"
     ],
 
+    "eqeqeq": "off",
     "no-useless-constructor": "off",
     "no-restricted-globals": "off",
     "no-unused-expressions": "off",
@@ -37,6 +38,8 @@
     "no-console": "warn",
     "no-self-assign": ["error", {"props": false}],
     "no-useless-escape": "warn",
+    "no-trailing-spaces": "warn",
+
     "react/jsx-indent": ["warn", 2],
     "react/prop-types": "warn",
     "react/display-name": "warn",
