[share dialog] added QR code for share/upload links

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-i18next": "^10.12.2",
     "react-mentions": "^3.0.2",
     "react-moment": "^0.7.9",
+    "react-qr-code": "^1.0.5",
     "react-responsive": "^6.1.2",
     "react-select": "^2.4.1",
     "reactstrap": "^6.4.0",
