--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reach/router": "^1.2.0",
+    "@reach/router": "1.3.4",
     "@seafile/react-image-lightbox": "0.0.1",
     "@seafile/resumablejs": "1.1.16",
     "@seafile/seafile-calendar": "0.0.12",
-    "@seafile/seafile-editor": "^0.3.55",
+    "@seafile/seafile-editor": "0.3.62",
     "MD5": "^1.3.0",
     "chart.js": "2.9.4",
     "classnames": "^2.2.6",
@@ -19,7 +19,7 @@
     "merge": "^1.2.1",
     "moment": "^2.22.2",
     "object-assign": "4.1.1",
-    "prismjs": "^1.15.0",
+    "prismjs": "1.23.0",
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
     "react": "^16.8.6",
@@ -34,7 +34,7 @@
     "react-responsive": "^6.1.2",
     "react-select": "^2.4.1",
     "reactstrap": "^6.4.0",
-    "seafile-js": "0.2.167",
+    "seafile-js": "0.2.169",
     "socket.io-client": "^2.2.0",
     "unified": "^7.0.0",
     "url-parse": "^1.4.3",
@@ -144,7 +144,7 @@
     "postcss-safe-parser": "5.0.2",
     "prompts": "2.4.0",
     "react-app-polyfill": "^2.0.0",
-    "react-dev-utils": "^11.0.1",
+    "react-dev-utils": "11.0.4",
     "react-refresh": "^0.8.3",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
