--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
     "react": "^16.8.6",
+    "react-app-polyfill": "^2.0.0",
     "react-chartjs-2": "^2.8.0",
     "react-codemirror": "^1.0.0",
     "react-cookies": "^0.1.0",
@@ -53,12 +54,14 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "ie 11"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "ie 11"
     ]
   },
   "jest": {
@@ -143,7 +146,6 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
     "prompts": "2.4.0",
-    "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "11.0.4",
     "react-refresh": "^0.8.3",
     "resolve": "1.18.1",
