--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,27 +15,4 @@ jobs:
 
       - name: apt install
         run: |
-          sudo apt-get update --fix-missing
-          sudo apt-get install -y libevent-dev libcurl4-openssl-dev libglib2.0-dev
-          sudo apt-get install -y uuid-dev intltool libsqlite3-dev build-essential
-          sudo apt-get install -y libarchive-dev libtool libjansson-dev valac
-          sudo apt-get install -y libfuse-dev cmake re2c flex sqlite3
-          sudo apt-get install -y libssl-dev libldap2-dev libonig-dev
-          sudo apt-get install -y libxml2 libxml2-dev
-
-      - name: clone and build
-        run: |
-          git clone --depth=1 --branch=8.0 git://github.com/haiwen/seafile-test-deploy /tmp/seafile-test-deploy
-          cd /tmp/seafile-test-deploy && git fetch origin 8.0:8.0 && git checkout 8.0
-          ./bootstrap.sh
-
-      - name: pip install
-        run: |
-          cd $GITHUB_WORKSPACE
-          pip install -r test-requirements.txt
-
-      - name: run pytest
-        run: |
-          cd $GITHUB_WORKSPACE
-          export CCNET_CONF_DIR=/tmp/ccnet SEAFILE_CONF_DIR=/tmp/seafile-data TRAVIS=1
-          if ./tests/test_seahub_changes.sh; then ./tests/seahubtests.sh init && ./tests/seahubtests.sh runserver && ./tests/seahubtests.sh test; else true; fi
+          sudo pip3 list
