--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,12 @@ jobs:
       - name: apt install
         run: |
           sudo pip3 list
+          sudo pip3 show chardet
+          sudo echo '********'
+          sudo env
+          sudo echo '********'
+          sudo export
+          sudo echo '********'
           sudo apt-get update --fix-missing
           sudo apt-get install -y libevent-dev libcurl4-openssl-dev libglib2.0-dev
           sudo apt-get install -y uuid-dev intltool libsqlite3-dev build-essential
