--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "object-assign": "4.1.1",
     "prismjs": "1.23.0",
     "prop-types": "^15.6.2",
+    "qrcode.react": "^1.0.1",
     "raf": "3.4.0",
     "react": "^16.8.6",
     "react-app-polyfill": "^2.0.0",
