--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -18,16 +18,16 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-python@v1
         with:
-          python-version: "3.x"
+          python-version: "3.6"
       - uses: actions/setup-node@v1
         with:
           node-version: "10.x"
 
       - name: gettext for django
-        run: sudo apt-get install gettext
+        run: sudo apt-get install gettext python3-wheel
 
       - name: Build dist branch
         run: |
-          cd $GITHUB_WORKSPACE/tests/ 
-          chmod +x github_actions_dist.sh 
+          cd $GITHUB_WORKSPACE/tests/
+          chmod +x github_actions_dist.sh
           ./github_actions_dist.sh
