--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,8 @@ django-formtools==2.3
 django-simple-captcha
 djangorestframework==3.11.1
 python-dateutil
-requests==2.26.0
-urllib3==1.26.7
+requests
+urllib3==1.25.11
 pillow
 pyjwt==2.1.*
 pycryptodome==3.12.0
