--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: clone and build
         run: |
-          git clone --depth=1 --branch=8.0 https://github.com/haiwen/seafile-test-deploy /tmp/seafile-test-deploy
-          cd /tmp/seafile-test-deploy && git fetch origin 8.0:8.0 && git checkout 8.0
+          git clone --depth=1 --branch=master https://github.com/haiwen/seafile-test-deploy /tmp/seafile-test-deploy
+          cd /tmp/seafile-test-deploy && git fetch origin master:master && git checkout master
           ./bootstrap.sh
 
       - name: pip install
