use exampe.com instead of domain.com
https://www.iana.org/domains/reserved

--- a/seahub/krb5_auth/settings.template
+++ b/seahub/krb5_auth/settings.template
@@ -1,6 +1,6 @@
 ENABLE_KRB5_LOGIN = True
 KRB5_REALM = 'OFF.COM'
-KRB5_USERNAME_SUFFIX = '@domain.com'
+KRB5_USERNAME_SUFFIX = '@example.com'
 #KRB5_CREATE_UNKNOWN_USER = False
 EXTRA_INSTALLED_APPS = (
     'seahub_extra.krb5_auth',
