--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,8 @@
     "reactstrap": "8.9.0",
     "seafile-js": "0.2.191",
     "socket.io-client": "^2.2.0",
+    "svg-sprite-loader": "^6.0.11",
+    "svgo-loader": "^3.0.1",
     "unified": "^7.0.0",
     "url-parse": "^1.4.3",
     "video.js": "^7.4.1",
