--- a/frontend/package.json
+++ b/frontend/package.json
@@ -159,7 +159,7 @@
     "url-loader": "4.1.1",
     "web-vitals": "^0.2.4",
     "webpack": "4.44.2",
-    "webpack-bundle-tracker": "1.7.0",
+    "webpack-bundle-tracker": "^0.4.3",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "5.1.4"
