--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -18,13 +18,13 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-python@v1
         with:
-          python-version: "3.7"
+          python-version: "3.8"
       - uses: actions/setup-node@v1
         with:
           node-version: "10.x"
 
       - name: gettext for django
-        run: sudo apt-get install gettext python3-wheel
+        run: sudo apt-get install gettext python3-wheel libjwt-dev
 
       - name: Build dist branch
         run: |
