--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-python@v1
         with:
-          python-version: "3.7"
+          python-version: "3.8"
 
       - name: apt install
         run: |
@@ -21,7 +21,7 @@ jobs:
           sudo apt-get install -y libarchive-dev libtool libjansson-dev valac
           sudo apt-get install -y libfuse-dev cmake re2c flex sqlite3
           sudo apt-get install -y libssl-dev libldap2-dev libonig-dev
-          sudo apt-get install -y libxml2 libxml2-dev
+          sudo apt-get install -y libxml2 libxml2-dev libjwt-dev
 
       - name: clone and build
         run: |
