--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
-Django==3.2.14
-future
-captcha
-django-statici18n
-django-webpack_loader==0.7.0
-gunicorn
-mysqlclient
-django-picklefield==2.1.1
-openpyxl
-qrcode
-django-formtools==2.3
-django-simple-captcha
-djangorestframework==3.11.1
-python-dateutil
-requests
-pillow
-pyjwt==2.1.*
-pycryptodome==3.12.0
-requests_oauthlib
-chardet
-python-cas
-djangosaml2==0.20.0
-pysaml2==6.5.1
-cffi==1.14.0
-Markdown
-bleach
+Django==3.2.16
+django-statici18n==2.3.*
+django_webpack_loader==1.7.*
+django_picklefield==3.1
+django_formtools==2.4
+django_simple_captcha==0.5.*
+djangosaml2==1.5.*
+djangorestframework==3.14.*
+python-dateutil==2.8.*
+pyjwt==2.6.*
+pycryptodome==3.16.*
+python-cas==1.6.*
+pysaml2==7.2.*
+requests==2.28.*
+requests_oauthlib==1.3.*
+future==0.18.*
+gunicorn==20.1.*
+mysqlclient==2.1.*
+qrcode==7.3.*
+pillow==9.3.*
+chardet==5.1.*
+cffi==1.15.1
+captcha==0.4
+openpyxl==3.0.*
+Markdown==3.4.*
+bleach==5.0.*
