--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "react": "^16.8.6",
     "react-app-polyfill": "^2.0.0",
     "react-chartjs-2": "^2.8.0",
-    "react-codemirror": "^1.0.0",
+    "react-codemirror2": "7.2.1",
     "react-cookies": "^0.1.0",
     "react-dom": "^16.8.6",
     "react-i18next": "^10.12.2",
@@ -108,7 +108,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "babel-eslint": "8.0.1",
+    "babel-eslint": "10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
