--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,9 @@
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.0.8",
     "glamor": "^2.20.40",
-    "i18next": "^17.0.13",
-    "i18next-browser-languagedetector": "^3.0.3",
-    "i18next-xhr-backend": "^3.1.2",
+    "i18next": "22.4.6",
+    "i18next-browser-languagedetector": "7.0.1",
+    "i18next-xhr-backend": "3.2.2",
     "MD5": "^1.3.0",
     "merge": "^1.2.1",
     "moment": "^2.22.2",
@@ -29,7 +29,7 @@
     "react-codemirror2": "7.2.1",
     "react-cookies": "^0.1.0",
     "react-dom": "^16.8.6",
-    "react-i18next": "^10.12.2",
+    "react-i18next": "12.1.1",
     "react-mentions": "^3.0.2",
     "react-moment": "^0.7.9",
     "react-qr-code": "^1.0.5",
