--- a/frontend/package.json
+++ b/frontend/package.json
@@ -161,7 +161,6 @@
     "webpack": "4.44.2",
     "webpack-bundle-tracker": "1.7.0",
     "webpack-dev-server": "3.11.0",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "5.1.4"
+    "webpack-manifest-plugin": "2.2.0"
   }
 }
