--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,12 +23,12 @@
     "prop-types": "^15.6.2",
     "qrcode.react": "^1.0.1",
     "raf": "3.4.0",
-    "react": "^16.8.6",
+    "react": "16.14.0",
     "react-app-polyfill": "^2.0.0",
     "react-chartjs-2": "^2.8.0",
     "react-codemirror2": "7.2.1",
     "react-cookies": "^0.1.0",
-    "react-dom": "^16.8.6",
+    "react-dom": "16.14.0",
     "react-i18next": "12.1.1",
     "react-mentions": "^3.0.2",
     "react-moment": "^0.7.9",
