--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,35 +8,33 @@
     "@seafile/resumablejs": "1.1.16",
     "@seafile/seafile-calendar": "0.0.12",
     "@seafile/seafile-editor": "0.3.111",
-    "chart.js": "2.9.4",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.0.8",
     "glamor": "^2.20.40",
-    "i18next": "^17.0.13",
-    "i18next-browser-languagedetector": "^3.0.3",
-    "i18next-xhr-backend": "^3.1.2",
+    "i18next": "22.4.6",
+    "i18next-browser-languagedetector": "7.0.1",
+    "i18next-xhr-backend": "3.2.2",
     "MD5": "^1.3.0",
-    "merge": "^1.2.1",
     "moment": "^2.22.2",
     "object-assign": "4.1.1",
     "prismjs": "1.23.0",
     "prop-types": "^15.6.2",
     "qrcode.react": "^1.0.1",
     "raf": "3.4.0",
-    "react": "^16.8.6",
+    "react": "16.14.0",
     "react-app-polyfill": "^2.0.0",
     "react-chartjs-2": "^2.8.0",
-    "react-codemirror": "^1.0.0",
+    "react-codemirror2": "7.2.1",
     "react-cookies": "^0.1.0",
-    "react-dom": "^16.8.6",
-    "react-i18next": "^10.12.2",
+    "react-dom": "16.14.0",
+    "react-i18next": "12.1.1",
     "react-mentions": "^3.0.2",
     "react-moment": "^0.7.9",
     "react-qr-code": "^1.0.5",
     "react-responsive": "^6.1.2",
     "react-select": "^2.4.1",
     "reactstrap": "^6.4.0",
-    "seafile-js": "0.2.186",
+    "seafile-js": "0.2.190",
     "socket.io-client": "^2.2.0",
     "unified": "^7.0.0",
     "url-parse": "^1.4.3",
@@ -108,7 +106,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "babel-eslint": "8.0.1",
+    "babel-eslint": "10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
@@ -147,7 +145,7 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
     "prompts": "2.4.0",
-    "react-dev-utils": "11.0.4",
+    "react-dev-utils": "12.0.1",
     "react-refresh": "^0.8.3",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
@@ -161,7 +159,6 @@
     "webpack": "4.44.2",
     "webpack-bundle-tracker": "1.7.0",
     "webpack-dev-server": "3.11.0",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "5.1.4"
+    "webpack-manifest-plugin": "2.2.0"
   }
 }
