update react-select version

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
     "react-moment": "^0.7.9",
     "react-qr-code": "^1.0.5",
     "react-responsive": "^6.1.2",
-    "react-select": "^2.4.1",
+    "react-select": "5.7.0",
     "reactstrap": "^6.4.0",
     "seafile-js": "0.2.190",
     "socket.io-client": "^2.2.0",
