--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
     "react-cookies": "^0.1.0",
     "react-dom": "16.14.0",
     "react-i18next": "12.1.1",
-    "react-mentions": "^3.0.2",
+    "react-mentions": "4.4.7",
     "react-qr-code": "^1.0.5",
     "react-responsive": "9.0.2",
     "react-select": "5.7.0",
