--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,6 @@
     "prismjs": "1.23.0",
     "prop-types": "^15.6.2",
     "qrcode.react": "^1.0.1",
-    "raf": "3.4.0",
     "react": "16.14.0",
     "react-app-polyfill": "^2.0.0",
     "react-chartjs-2": "^2.8.0",
@@ -28,20 +27,17 @@
     "react-cookies": "^0.1.0",
     "react-dom": "16.14.0",
     "react-i18next": "12.1.1",
-    "react-mentions": "^3.0.2",
-    "react-moment": "^0.7.9",
+    "react-mentions": "4.4.7",
     "react-qr-code": "^1.0.5",
-    "react-responsive": "^6.1.2",
-    "react-select": "^2.4.1",
+    "react-responsive": "9.0.2",
+    "react-select": "5.7.0",
     "reactstrap": "^6.4.0",
     "seafile-js": "0.2.190",
     "socket.io-client": "^2.2.0",
     "unified": "^7.0.0",
     "url-parse": "^1.4.3",
-    "vfile": "^3.0.0",
     "video.js": "^7.4.1",
-    "watermark-dom": "^1.0.0",
-    "whatwg-fetch": "2.0.3"
+    "watermark-dom": "^1.0.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
