update react react-dom prop-types

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@seafile/resumablejs": "1.1.16",
     "@seafile/seafile-calendar": "0.0.12",
     "@seafile/seafile-editor": "0.3.111",
+    "@seafile/slate-react": "0.54.13",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.0.8",
     "glamor": "^2.20.40",
@@ -18,19 +19,20 @@
     "moment": "^2.22.2",
     "object-assign": "4.1.1",
     "prismjs": "1.23.0",
-    "prop-types": "^15.6.2",
+    "prop-types": "15.8.1",
     "qrcode.react": "^1.0.1",
-    "react": "16.14.0",
+    "react": "18.2.0",
     "react-app-polyfill": "^2.0.0",
     "react-chartjs-2": "^2.8.0",
     "react-codemirror2": "7.2.1",
     "react-cookies": "^0.1.0",
-    "react-dom": "16.14.0",
+    "react-dom": "18.2.0",
     "react-i18next": "12.1.1",
     "react-mentions": "4.4.7",
     "react-qr-code": "^1.0.5",
     "react-responsive": "9.0.2",
     "react-select": "5.7.0",
+    "react-transition-group": "4.4.5",
     "reactstrap": "^6.4.0",
     "seafile-js": "0.2.190",
     "socket.io-client": "^2.2.0",
