--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,7 @@
     "react-responsive": "9.0.2",
     "react-select": "5.7.0",
     "react-transition-group": "4.4.5",
-    "reactstrap": "^6.4.0",
+    "reactstrap": "8.9.0",
     "seafile-js": "0.2.190",
     "socket.io-client": "^2.2.0",
     "unified": "^7.0.0",
