--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,11 @@
     "@seafile/react-image-lightbox": "0.0.1",
     "@seafile/resumablejs": "1.1.16",
     "@seafile/seafile-calendar": "0.0.12",
-    "@seafile/seafile-editor": "0.3.12-1.bate",
+    "@seafile/seafile-editor": "0.3.122",
     "@seafile/slate-react": "0.54.13",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.0.8",
+    "crypto-js": "4.1.1",
     "deep-copy": "1.4.2",
     "glamor": "^2.20.40",
     "i18next": "22.4.6",
