--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: "10.x"
 
       - name: gettext for django
-        run: sudo apt-get install gettext python3-wheel
+        run: sudo apt-get install gettext python3-wheel libjwt-dev
 
       - name: Build dist branch
         run: |
