--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reach/router": "1.3.4",
-    "@seafile/react-image-lightbox": "0.0.1",
+    "@gatsbyjs/reach-router": "^1.3.9",
+    "@seafile/react-image-lightbox": "^1.0.1",
     "@seafile/resumablejs": "1.1.16",
     "@seafile/seafile-calendar": "0.0.12",
     "@seafile/seafile-editor": "0.3.122",
@@ -23,12 +23,12 @@
     "prismjs": "1.23.0",
     "prop-types": "15.8.1",
     "qrcode.react": "^1.0.1",
-    "react": "18.2.0",
+    "react": "^17.0.0",
     "react-app-polyfill": "^2.0.0",
     "react-chartjs-2": "^2.8.0",
-    "react-codemirror2": "7.2.1",
+    "react-codemirror2": "^7.2.1",
     "react-cookies": "^0.1.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^17.0.0",
     "react-i18next": "12.1.1",
     "react-mentions": "4.4.7",
     "react-qr-code": "^1.0.5",
