--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "@seafile/react-image-lightbox": "^1.0.1",
     "@seafile/resumablejs": "1.1.16",
     "@seafile/seafile-calendar": "0.0.12",
-    "@seafile/seafile-editor": "0.3.122",
+    "@seafile/seafile-editor": "^0.3.123",
     "@seafile/slate-react": "0.54.13",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.0.8",
