--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@gatsbyjs/reach-router": "^1.3.9",
-    "@seafile/react-image-lightbox": "^1.0.1",
+    "@seafile/react-image-lightbox": "1.0.1",
     "@seafile/resumablejs": "1.1.16",
     "@seafile/seafile-calendar": "0.0.12",
-    "@seafile/seafile-editor": "^0.3.125",
+    "@seafile/seafile-editor": "0.3.125",
     "@seafile/slate-react": "0.54.13",
     "@uiw/codemirror-extensions-langs": "^4.19.4",
     "@uiw/react-codemirror": "^4.19.4",
@@ -25,11 +25,11 @@
     "prismjs": "1.23.0",
     "prop-types": "15.8.1",
     "qrcode.react": "^1.0.1",
-    "react": "^17.0.0",
+    "react": "17.0.0",
     "react-app-polyfill": "^2.0.0",
     "react-chartjs-2": "^2.8.0",
     "react-cookies": "^0.1.0",
-    "react-dom": "^17.0.0",
+    "react-dom": "17.0.0",
     "react-i18next": "12.1.1",
     "react-mentions": "4.4.7",
     "react-qr-code": "^1.0.5",
