--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@gatsbyjs/reach-router": "^1.3.9",
+    "@gatsbyjs/reach-router": "1.3.9",
     "@seafile/react-image-lightbox": "1.0.1",
     "@seafile/resumablejs": "1.1.16",
     "@seafile/seafile-calendar": "0.0.12",
