--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: gettext for django
         run: |
-          sudo apt-get install gettext python3-wheel libjwt-dev
+          sudo apt-get install gettext python3-wheel libjwt-dev libsasl2-dev libldap2-dev
           sudo rm -rf /usr/lib/python3/dist-packages/pytz/
 
       - name: Build dist branch
