--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
           sudo apt-get install -y uuid-dev intltool libsqlite3-dev build-essential
           sudo apt-get install -y libarchive-dev libtool libjansson-dev valac
           sudo apt-get install -y libfuse-dev cmake re2c flex sqlite3
-          sudo apt-get install -y libssl-dev libldap2-dev libonig-dev
+          sudo apt-get install -y libssl-dev libsasl2-dev libldap2-dev libonig-dev
           sudo apt-get install -y libxml2 libxml2-dev libjwt-dev
 
       - name: clone and build
