--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "i18next": "22.4.6",
     "i18next-browser-languagedetector": "7.0.1",
     "i18next-xhr-backend": "3.2.2",
+    "is-hotkey": "0.2.0",
     "MD5": "^1.3.0",
     "moment": "^2.22.2",
     "object-assign": "4.1.1",
@@ -38,7 +39,7 @@
     "react-select": "5.7.0",
     "react-transition-group": "4.4.5",
     "reactstrap": "8.9.0",
-    "seafile-js": "0.2.205",
+    "seafile-js": "0.3.0-beta4",
     "socket.io-client": "^2.2.0",
     "svg-sprite-loader": "^6.0.11",
     "svgo-loader": "^3.0.1",
