--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "@seafile/resumablejs": "1.1.16",
     "@seafile/sdoc-editor": "0.3.22",
     "@seafile/seafile-calendar": "0.0.12",
-    "@seafile/seafile-editor": "0.4.8",
+    "@seafile/seafile-editor": "1.0.5",
     "@uiw/codemirror-extensions-langs": "^4.19.4",
     "@uiw/react-codemirror": "^4.19.4",
     "classnames": "^2.2.6",
@@ -17,9 +17,9 @@
     "crypto-js": "4.2.0",
     "deep-copy": "1.4.2",
     "glamor": "^2.20.40",
-    "i18next": "22.4.6",
-    "i18next-browser-languagedetector": "7.0.1",
-    "i18next-xhr-backend": "3.2.2",
+    "i18next": "^17.0.13",
+    "i18next-browser-languagedetector": "^3.0.3",
+    "i18next-xhr-backend": "^3.1.2",
     "is-hotkey": "0.2.0",
     "MD5": "^1.3.0",
     "moment": "^2.22.2",
@@ -32,7 +32,7 @@
     "react-chartjs-2": "^2.8.0",
     "react-cookies": "^0.1.0",
     "react-dom": "17.0.0",
-    "react-i18next": "12.1.1",
+    "react-i18next": "^10.12.2",
     "react-responsive": "9.0.2",
     "react-select": "5.7.0",
     "react-transition-group": "4.4.5",
